notebook/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jlewi-nb-theia # {"$kpt-set":"theia-name"} 
spec:
  gateways:
  - istio-system/ingressgateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        # The prefix must have a trailing slash
        # And when you navigate to the URL you must include the trailing slash.
        prefix: /notebook/default-profile/jlewi-nb-theia/ # {"$kpt-set":"theia-prefix"}
    rewrite:
      uri: /
    route:
    - destination:
        host: jlewi-nb-theia.default-profile.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.substitutions.theia-host"}    
        port:
          number: 3000
    timeout: 300s
